config-root/namespaces/jx-production/nodedemo/nodedemo-svc.yaml
# Source: nodedemo/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodedemo
  labels:
    chart: "nodedemo-1.0.57"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: nodedemo-nodedemo
